[metadata]
name = zineb-scrapper
version = attr: zineb.version.VERSION
description = Advanced web scrapper for machine learning and data science buit around BeautifulSoup
long_description = file: README.md, CHANGELOG.md, LICENSE.rst
keywords=python,web scrapping,scrapping
license = MIT
author = John Pendenque
author_email = pendenquejohn@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    beautifulsoup4>=4.9.3
    jupyter
    numpy
    Pillow>=8.0.1
    pyyaml
    requests
    w3lib
